--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             <h1 class="apresentacao__conteudo__title">Skyrocket your business <strong class="highlight1">with a top-notch professional!</strong></h1>
             <p class="apresentacao__conteudo__texto">Hi! I am Jefferson Araujo (or simply Jeff) a beginner level developer holding a basic-intermediate knowlegde of HTML e CSS, Git, JavaScript, Python e Linux. I am looking for an opportunity to both work and learn. Shall we talk?</p>
             <div class="links">
-                <h2 class="apresentacao_subtitle">Take a closer a look:</h2>
+                <h2 class="apresentacao_subtitle">Social media:</h2>
                 <a class="estilo_links" href="https://www.linkedin.com/in/jefferson-araujo-09421b199/" target="_blank"><img src="Images/linkedin.png">Linkedin</a>
                 <a class="estilo_links" href="https://github.com/JeffDev17" target="_blank"><img src="Images/github.png">GitHub</a>
                 <a class="estilo_links" href="https://www.instagram.com/jeeeff_" target="_blank"><img src="Images/instagram.png">Instagram</a>
+                <h2 class="apresentacao_subtitle">My latest projects:</h2>
                 <a class="estilo_links" href="https://editor.p5js.org/JeffDev17/full/XbDYbjACq" target="_blank">JS Car Game</a>
                 <a class="estilo_links" href="https://editor.p5js.org/JeffDev17/full/PvhH5vxQy" target="_blank">JS Pong Game</a>
             </div>
